--- a/src/recources/plugin.yml
+++ b/src/recources/plugin.yml
@@ -1,3 +1,3 @@
-name: LightPick
-main: LightPick.LightPick
-version: 1.0
+name: ${artifactId}
+main: com.strongholdcraft.lightpick.LightPick
+version: ${version}
