--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <defaultGoal>install</defaultGoal>
-        <sourceDirectory>${basedir}/src/java</sourceDirectory>
+        <sourceDirectory>${project.basedir}/src/java</sourceDirectory>
 
         <plugins>
             <plugin>
@@ -25,7 +25,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2-beta-2</version>
                 <configuration>
-                    <descriptor>${basedir}/src/assembly.xml</descriptor>
+                    <descriptor>${project.basedir}/src/assembly.xml</descriptor>
                 </configuration>
                 <executions>
                     <execution>
@@ -43,7 +43,7 @@
             <resource>
                 <targetPath>.</targetPath>
                 <filtering>true</filtering>
-                <directory>${basedir}/src/resources</directory>
+                <directory>${project.basedir}/src/recources</directory>
                 <includes>
                     <include>plugin.yml</include>
                 </includes>
@@ -55,13 +55,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.7.9-R0.1-SNAPSHOT</version>
+            <version>1.7.9-R0.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.sk89q</groupId>
             <artifactId>worldguard</artifactId>
-            <version>5.6.2</version>
+            <version>5.9</version>
         </dependency>
 
         <dependency>
