--- a/src/recources/plugin.yml
+++ b/src/recources/plugin.yml
@@ -1,3 +1,3 @@
-name: ${artifactId}
+name: ${project.artifactId}
 main: com.strongholdcraft.lightpick.LightPick
-version: ${version}
+version: ${project.version}
