--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
                 <directory>${project.basedir}/src/recources</directory>
                 <includes>
                     <include>plugin.yml</include>
+                    <include>config.yml</include>
                 </includes>
             </resource>
         </resources>
